--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">eBay Shopping Applictaion</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="validation1">Enter a keyword</string>
     <string-array name="spinner_items">
         <item>All</item>
         <item>Art</item>
