--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,16 @@
         <item>Music</item>
         <item>Video,Games and Consoles</item>
     </string-array>
+    <string-array name="spinner_items1">
+        <item>Default</item>
+        <item>Name</item>
+        <item>Price</item>
+        <item>Days</item>
+    </string-array>
+    <string-array name="spinner_items2">
+        <item>Ascending</item>
+        <item>Descending</item>
+    </string-array>
     <string name="facebook_app_id">3245885425558259</string>
     <string name="facebook_client_token">3hSXcAoql5tJjv3IkUFvhyOzhHQ</string>
 </resources>
